// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table applies responsive stacked table 1`] = `
<div>
  <table
    className="ds-c-table ds-c-table--stacked-lg"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table applies responsive stacked table with header styles 1`] = `
<div>
  <table
    className="ds-c-table ds-c-table--stacked-sm ds-c-table--stacked-header-styles"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table table caption scrollable true applies scroll table wrapper and classes 1`] = `
<Table
  scrollable={true}
  scrollableNotice={
    <Alert
      className="ds-u-margin-y--1 ds-u-font-weight--normal"
      headingLevel="3"
      role="status"
    >
      <p
        className="ds-c-alert__text"
      >
        Scroll using arrow keys to see more
      </p>
    </Alert>
  }
  stackableBreakpoint="sm"
>
  <div
    aria-labelledby="caption-11"
    aria-live="polite"
    aria-relevant="additions"
    className="ds-c-table__wrapper"
    role="region"
    tabIndex={null}
  >
    <table
      className="ds-c-table"
      role="table"
    >
      <TableCaption
        _id="caption-11"
        _scrollActive={false}
        _scrollableNotice={
          <Alert
            className="ds-u-margin-y--1 ds-u-font-weight--normal"
            headingLevel="3"
            role="status"
          >
            <p
              className="ds-c-alert__text"
            >
              Scroll using arrow keys to see more
            </p>
          </Alert>
        }
        key=".0"
      >
        <caption
          className="ds-c-table__caption"
          id="caption-11"
        >
          Foo
        </caption>
      </TableCaption>
    </table>
  </div>
</Table>
`;

exports[`Table table caption scrollable true applies scrollableNotice 1`] = `
<Table
  scrollable={true}
  scrollableNotice="foo scrollable notice"
  stackableBreakpoint="sm"
>
  <div
    aria-labelledby="caption-14"
    aria-live="polite"
    aria-relevant="additions"
    className="ds-c-table__wrapper"
    role="region"
    tabIndex={null}
  >
    <table
      className="ds-c-table"
      role="table"
    >
      <TableCaption
        _id="caption-14"
        _scrollActive={false}
        _scrollableNotice="foo scrollable notice"
        key=".0"
      >
        <caption
          className="ds-c-table__caption"
          id="caption-14"
        >
          Foo
        </caption>
      </TableCaption>
    </table>
  </div>
</Table>
`;
